# Trainscanner

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Agent_Migration_Plan.md  Agent_Prompt_Task_1.1.md  Agent_Prompt_Task_1.2.md  Agent_Prompt_Task_2.1.md  Agent_Prompt_Task_2.2.md  Agent_Prompt_Task_3.1.md  Agent_Prompt_Task_5.2.md  Agent_Prompt_Task_6.1.md  Agent_Prompt_Task_6.2.md  Project Scope.md  README.md  biome.json  docker-compose.sonar.yml  docker-compose.yml  jsconfig.json  package-lock.json  package.json  plan.md  sonar-project.properties
.husky/: pre-push
.playwright-cli/: page-2026-02-20T22-29-32-082Z.yml  page-2026-02-20T22-29-32-768Z.yml  page-2026-02-20T22-30-37-959Z.yml  page-2026-02-20T22-30-38-616Z.yml  page-2026-02-20T22-30-55-109Z.yml  page-2026-02-20T22-31-28-005Z.yml  page-2026-02-20T22-31-39-937Z.yml  page-2026-02-20T22-32-08-692Z.yml  page-2026-02-20T22-33-40-938Z.yml  page-2026-02-20T22-33-56-204Z.yml  page-2026-02-20T22-34-10-772Z.yml  page-2026-02-20T22-34-37-632Z.yml  page-2026-02-20T22-34-50-098Z.yml  page-2026-02-20T22-35-13-994Z.yml  page-2026-02-20T22-35-23-952Z.yml  page-2026-02-20T22-36-37-529Z.yml
.tmp/: sonar-main-latest.json  sonar-main-latest.tsv
config/: active-gtfs.json  dach-data-sources.json  europe-data-sources.json  gtfs-profiles.json  init-db.sql  motis-config.ini  ojp-endpoints.json  ojp-endpoints.mock.json
control-plane/: package-lock.json  package.json  tsconfig.json
workers/rust-ingestion/: Cargo.toml
workers/rust-ingestion/src/: main.rs
workers/rust-ingestion/src/activities/: netex.rs
(+524 files in other folders)
